  + The verbose attribute of hwloc_obj_type/attr_snprintf() is replaced
    by flags, where value 1 keeps the same meaning as in hwloc 2.x.
  + PCI domains are now always 32bits.
  + The "programming interface" of PCI devices is now exposed
    in PCI object attributes.
  + "Block" OS devices are now "Storage" (for actual Block devices)
    or "Memory" (for Linux DAX and CXL devices, etc).
* Tools
  + lstopo has a new --osf option to tune the displaying of object
    attributes and units.
* Removed features
  + Netloc.
  + Importing and exporting from/to hwloc 1.x XML.
  + BlueGene/Q support.
  + Functions that were deprecated since 2.0:
    - hwloc_topology_insert_misc_object_by_parent()
    - hwloc_obj_cpuset_snprintf()
    - hwloc_obj_type_sscanf()
    - hwloc_cpuset_to_nodeset_strict()
    - hwloc_cpuset_from_nodeset_strict()
  + HWLOC_PCI_<domain>_<bus>_LOCALCPUS environment variables,
    superseded with a single HWLOC_PCI_LOCALITY since 2.0.
* Misc
  + XML format switches to 3.0 by default. Exporting to 2.x is
    possible with the new V2 XML export flag.


Version 2.9.2
-------------
* Don't forget L3i when defining filters for multiple levels of caches
  with hwloc_topology_set_cache/icache_types_filter().
* Fix object total_memory after hwloc_topology_insert_group_object().
* Fix the (non-yet) exporting in synthetic description for complex memory
  hierarchies with memory-side caches, etc.
* Fix some default size attributes when building synthetic topologies.
* Fix size units in hwloc-annotate.
* Improve bitmap reallocation error management in many functions.
* Documentation improvements:
  + Better document return values of functions.
  + Add "Error reporting" section (in hwloc.h and in the doxygen doc).
  + Add FAQ entry "What may I disable to make hwloc faster?"
  + Improve FAQ entries "Why is lstopo slow?" and
    "I only need ..., why should I use hwloc?"
  + Clarify how to deal with cpukinds in hwloc-calc and hwloc-bind
    manpages.


Version 2.9.1