@@ -1,5 +1,5 @@
 /*
- * Copyright © 2010-2018 Inria.  All rights reserved.
+ * Copyright © 2010-2023 Inria.  All rights reserved.
  * Copyright © 2011 Cisco Systems, Inc.  All rights reserved.
  * See COPYING in top-level directory.
  */
@@ -13,11 +13,23 @@
 
 /* check the CUDA Runtime API helpers */
 
+static int check_cuda_backend(hwloc_topology_t topology)
+{
+  hwloc_obj_t root = hwloc_get_root_obj(topology);
+  unsigned i;
+  for(i=0; i<root->infos_count; i++)
+    if (!strcmp(root->infos[i].name, "Backend")
+        || !strcmp(root->infos[i].value, "CUDA"))
+      return 1;
+  return 0;
+}
+
 int main(void)
 {
   hwloc_topology_t topology;
   cudaError_t cerr;
   int count, i;
+  int has_cuda_backend;
   int err;
 
   cerr = cudaGetDeviceCount(&count);
@@ -30,6 +42,8 @@ int main(void)
   hwloc_topology_init(&topology);
   hwloc_topology_set_io_types_filter(topology, HWLOC_TYPE_FILTER_KEEP_IMPORTANT);
   hwloc_topology_load(topology);
+
+  has_cuda_backend = check_cuda_backend(topology);
 
   for(i=0; i<count; i++) {
     hwloc_bitmap_t set;
@@ -46,9 +60,7 @@ int main(void)
     assert(!err);
     assert(atoi(osdev->name+4) == (int) i);
 
-    value = hwloc_obj_get_info_by_name(osdev, "Backend");
-    err = strcmp(value, "CUDA");
-    assert(!err);
+    assert(has_cuda_backend);
 
     assert(osdev->attr->osdev.type == HWLOC_OBJ_OSDEV_COPROC);
 
