@@ -1,5 +1,5 @@
 /*
- * Copyright © 2012-2017 Inria.  All rights reserved.
+ * Copyright © 2012-2023 Inria.  All rights reserved.
  * See COPYING in top-level directory.
  */
 
@@ -12,12 +12,24 @@
 
 /* check the NVML helpers */
 
+static int check_nvml_backend(hwloc_topology_t topology)
+{
+  hwloc_obj_t root = hwloc_get_root_obj(topology);
+  unsigned i;
+  for(i=0; i<root->infos_count; i++)
+    if (!strcmp(root->infos[i].name, "Backend")
+        || !strcmp(root->infos[i].value, "NVML"))
+      return 1;
+  return 0;
+}
+
 int main(void)
 {
   hwloc_topology_t topology;
   nvmlReturn_t nvres;
   nvmlDevice_t device;
   unsigned count, i;
+  int has_nvml_backend;
   int err;
 
   nvres = nvmlInit();
@@ -36,6 +48,8 @@ int main(void)
   hwloc_topology_init(&topology);
   hwloc_topology_set_io_types_filter(topology, HWLOC_TYPE_FILTER_KEEP_IMPORTANT);
   hwloc_topology_load(topology);
+
+  has_nvml_backend = check_nvml_backend(topology);
 
   for(i=0; i<count; i++) {
     hwloc_bitmap_t set;
@@ -60,9 +74,7 @@ int main(void)
     assert(!err);
     assert(atoi(osdev->name+4) == (int) i);
 
-    value = hwloc_obj_get_info_by_name(osdev, "Backend");
-    err = strcmp(value, "NVML");
-    assert(!err);
+    assert(has_nvml_backend);
 
     assert(osdev->attr->osdev.type == HWLOC_OBJ_OSDEV_GPU);
 
